--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL="mysql://root:Swetha%402203@localhost:3306/swetha"
+DATABASE_URL="mysql://sql12719267:GwV557bPAP@sql12.freesqldatabase.com:3306/sql12719267"
 EMAIL_USER="swethapoppoppu@gmail.com"
 EMAIL_PASS="Swetha@99"
